--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li><a href="#"></a></li>
           <li><a href="#"></a></li>
         </ul>
-        <p>Call Us Now:<a href="tel:+1(777)784-25-43">+1(777)784-25-43</a></p>
+        <p>Call Us Now:<a href="tel:+1(777)784-25-43" class="tel-link">+1(777)784-25-43</a></p>
       </div>
     </header>
     <section class="navigation">
@@ -122,7 +122,7 @@
                 <img src="./images/p1.png" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, minima neque est atque et nobis.</p>
               </div>
-              <a href="##">more</a>
+              <a href="##" class="more_button">more</a>
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3">
@@ -132,7 +132,7 @@
                 <img src="./images/p2.png" alt="">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In dolorem vero expedita ipsam architecto?</p>
               </div>
-              <a href="##">more</a>
+              <a href="##" class="more_button">more</a>
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3">
@@ -142,7 +142,7 @@
                 <img src="./images/p3.png" alt="">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi exercitationem repellat rerum laborum voluptas commodi?</p>
               </div>
-              <a href="##">more</a>
+              <a href="##" class="more_button">more</a>
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3">
@@ -152,7 +152,7 @@
                 <img src="./images/p4.png" alt="">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis laborum quo enim obcaecati voluptates rerum non aliquam!</p>
               </div>
-              <a href="##">more</a>
+              <a href="##" class="more_button">more</a>
             </div>
           </div>
         </div>
@@ -165,7 +165,7 @@
               <div class="welcome_body">
                 <div><img src="./images/welcome.jpg" alt="office building" class="w-100"></div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias magnam sunt culpa recusandae cum debitis?<a
-                    href="##">more</a></p>
+                    href="##" class="more_link">more</a></p>
               </div>
             </div>
           </div>
@@ -208,14 +208,14 @@
                   <div><img src="./images/news1.jpg" alt="news photo"></div>
                   <div class="news_card_body">
                     <span class="news_date">12.12.12</span>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid...<a href="##">more</a></p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid...<a href="##" class="more_link">more</a></p>
                   </div>
                 </div>
                 <div class="news_card">
                   <div><img src="./images/news2.jpg" alt="news photo"></div>
                   <div class="news_card_body">
                     <span class="news_date">12.12.12</span>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid...<a href="##">more</a></p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid...<a href="##" class="more_link">more</a></p>
                   </div>
                 </div>
               </div>
@@ -332,7 +332,7 @@
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
-  <script src="./node_modules/swiper/swiper-bundle.js"></script>
-  <script src="./js/main.js"></script>
+  <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+  <script type='module' src="./js/main.js"></script>
 </body>
 </html>
