--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li><a href="#"></a></li>
           <li><a href="#"></a></li>
         </ul>
-        <p>Call Us Now:<a href="tel:+1(777)784-25-43" class="tel-link">+1(777)784-25-43</a></p>
+        <p>Call Us Now:<a href="tel:+1(777)784-25-43" class="tel_link">+1(777)784-25-43</a></p>
       </div>
     </header>
     <section class="navigation">
@@ -46,7 +46,6 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">about</a>
               </li>
-    
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownFeatures" role="button" data-bs-toggle="dropdown"
                   aria-expanded="false">
@@ -87,7 +86,7 @@
           </div>
         </div>
       </nav>
-      <form class="d-flex search">
+      <form class="search">
         <input class="form-control" type="search" placeholder="Search the Site..." aria-label="Search">
       </form>
     </section>
@@ -333,6 +332,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-  <script type='module' src="./js/main.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
