--- a/index.html
+++ b/index.html
@@ -31,67 +31,67 @@
         <p>Call Us Now:<a href="tel:+1(777)784-25-43" class="tel_link">+1(777)784-25-43</a></p>
       </div>
     </header>
-    <section class="navigation">
-      <nav class="navbar navbar-expand-md navbar-light modify_navbar">
-        <div class="container-fluid px-0">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">about</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownFeatures" role="button" data-bs-toggle="dropdown"
-                  aria-expanded="false">
-                  features
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownFeatures">
-                  <li><a class="dropdown-item" href="#">sub item 1</a></li>
-                  <li><a class="dropdown-item" href="#">sub item 2</a></li>
-                  <li><a class="dropdown-item" href="#">sub item 3</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" role="button" data-bs-toggle="dropdown"
-                  aria-expanded="false">
-                  portfolio
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownPortfolio">
-                  <li><a class="dropdown-item" href="#">sub item 1</a></li>
-                  <li><a class="dropdown-item" href="#">sub item 2</a></li>
-                  <li><a class="dropdown-item" href="#">sub item 3</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" role="button" data-bs-toggle="dropdown"
-                  aria-expanded="false">
-                  blogs
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownBlog">
-                  <li><a class="dropdown-item" href="#">sub item 1</a></li>
-                  <li><a class="dropdown-item" href="#">sub item 2</a></li>
-                  <li><a class="dropdown-item" href="#">sub item 3</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">contact</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <form class="search">
-        <input class="form-control" type="search" placeholder="Search the Site..." aria-label="Search">
-      </form>
-    </section>
     <main>
-      <div id="carouselFade" class="carousel slide carousel-fade carousel_modify" data-bs-ride="carousel">
+      <section class="navigation">
+        <nav class="navbar navbar-expand-md navbar-light modify_navbar">
+          <div class="container-fluid px-0">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">about</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownFeatures" role="button"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                    features
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownFeatures">
+                    <li><a class="dropdown-item" href="#">sub item 1</a></li>
+                    <li><a class="dropdown-item" href="#">sub item 2</a></li>
+                    <li><a class="dropdown-item" href="#">sub item 3</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" role="button"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                    portfolio
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownPortfolio">
+                    <li><a class="dropdown-item" href="#">sub item 1</a></li>
+                    <li><a class="dropdown-item" href="#">sub item 2</a></li>
+                    <li><a class="dropdown-item" href="#">sub item 3</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    blogs
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownBlog">
+                    <li><a class="dropdown-item" href="#">sub item 1</a></li>
+                    <li><a class="dropdown-item" href="#">sub item 2</a></li>
+                    <li><a class="dropdown-item" href="#">sub item 3</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">contact</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+        <form class="search">
+          <input class="form-control" type="search" placeholder="Search the Site..." aria-label="Search">
+        </form>
+      </section>
+      <section id="carouselFade" class="carousel slide carousel-fade carousel_modify" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="./images/banner1.jpg" class="d-block w-100" alt="business">
@@ -111,14 +111,14 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
-      </div>
+      </section>
       <section class="service">
         <div class="row">
           <div class="col-12 col-md-6 col-lg-3">
             <div class="service_card">
               <div>
                 <h2 class="service_title">growth strategies</h2>
-                <img src="./images/p1.png" alt="">
+                <div class="service_icon_wrapper"><img src="./images/p1.png" alt="growth strategies"></div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, minima neque est atque et nobis.</p>
               </div>
               <a href="##" class="more_button">more</a>
@@ -128,7 +128,7 @@
             <div class="service_card">
               <div>
                 <h2 class="service_title">perfect support</h2>
-                <img src="./images/p2.png" alt="">
+                <div class="service_icon_wrapper"><img src="./images/p2.png" alt="perfect support"></div>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In dolorem vero expedita ipsam architecto?</p>
               </div>
               <a href="##" class="more_button">more</a>
@@ -138,7 +138,7 @@
             <div class="service_card">
               <div>
                 <h2 class="service_title">partners program</h2>
-                <img src="./images/p3.png" alt="">
+                <div class="service_icon_wrapper"><img src="./images/p3.png" alt="partners program"></div>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi exercitationem repellat rerum laborum voluptas commodi?</p>
               </div>
               <a href="##" class="more_button">more</a>
@@ -148,7 +148,7 @@
             <div class="service_card">
               <div>
                 <h2 class="service_title">premium services</h2>
-                <img src="./images/p4.png" alt="">
+                <div class="service_icon_wrapper"><img src="./images/p4.png" alt="premium services"></div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis laborum quo enim obcaecati voluptates rerum non aliquam!</p>
               </div>
               <a href="##" class="more_button">more</a>
@@ -162,7 +162,9 @@
             <div class="welcome">
               <h3 class="block_title">welcome</h3>
               <div class="welcome_body">
-                <div><img src="./images/welcome.jpg" alt="office building" class="w-100"></div>
+                <div class="welcome_image_wrapper">
+                  <img src="./images/welcome.jpg" alt="office building">
+                </div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias magnam sunt culpa recusandae cum debitis?<a
                     href="##" class="more_link">more</a></p>
               </div>
@@ -204,14 +206,18 @@
               <h3 class="block_title">news & events</h3>
               <div class="news_cards_block">
                 <div class="news_card">
-                  <div><img src="./images/news1.jpg" alt="news photo"></div>
+                  <div class="news_card_image">
+                    <img src="./images/news1.jpg" alt="news photo">
+                  </div>
                   <div class="news_card_body">
                     <span class="news_date">12.12.12</span>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid...<a href="##" class="more_link">more</a></p>
                   </div>
                 </div>
                 <div class="news_card">
-                  <div><img src="./images/news2.jpg" alt="news photo"></div>
+                  <div class="news_card_image">
+                    <img src="./images/news2.jpg" alt="news photo">
+                  </div>
                   <div class="news_card_body">
                     <span class="news_date">12.12.12</span>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid...<a href="##" class="more_link">more</a></p>
@@ -273,7 +279,7 @@
                 </div>
                 <div class="custom_info">
                   <img src="./images/men.jpg" alt="portrait">
-                  <div class="">
+                  <div>
                     <span class="name">stephen bingham</span>
                     <a href="##" class="organization">demolink org</a>
                   </div>
