--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Font awesome-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-  <!-- my css-->
+    <!-- my css-->
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -28,69 +28,69 @@
           <li><a href="#"></a></li>
           <li><a href="#"></a></li>
         </ul>
-        <p>Call Us Now:<a href="tel:+1(777)784-25-43" class="tel_link">+1(777)784-25-43</a></p>
+        <span class="telephone">Call Us Now:<a href="tel:+1(777)784-25-43" class="tel_link">+1(777)784-25-43</a></span>
       </div>
     </header>
-    <main>
-      <section class="navigation">
-        <nav class="navbar navbar-expand-md navbar-light modify_navbar">
-          <div class="container-fluid px-0">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">about</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownFeatures" role="button"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                    features
-                  </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownFeatures">
-                    <li><a class="dropdown-item" href="#">sub item 1</a></li>
-                    <li><a class="dropdown-item" href="#">sub item 2</a></li>
-                    <li><a class="dropdown-item" href="#">sub item 3</a></li>
-                  </ul>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" role="button"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                    portfolio
-                  </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownPortfolio">
-                    <li><a class="dropdown-item" href="#">sub item 1</a></li>
-                    <li><a class="dropdown-item" href="#">sub item 2</a></li>
-                    <li><a class="dropdown-item" href="#">sub item 3</a></li>
-                  </ul>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" role="button" data-bs-toggle="dropdown"
-                    aria-expanded="false">
-                    blogs
-                  </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownBlog">
-                    <li><a class="dropdown-item" href="#">sub item 1</a></li>
-                    <li><a class="dropdown-item" href="#">sub item 2</a></li>
-                    <li><a class="dropdown-item" href="#">sub item 3</a></li>
-                  </ul>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">contact</a>
-                </li>
-              </ul>
-            </div>
+    <section class="navigation">
+      <nav class="navbar navbar-expand-md navbar-light modify_navbar">
+        <div class="container-fluid px-0">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">about</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownFeatures" role="button"
+                  data-bs-toggle="dropdown" aria-expanded="false">
+                  features
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownFeatures">
+                  <li><a class="dropdown-item" href="#">sub item 1</a></li>
+                  <li><a class="dropdown-item" href="#">sub item 2</a></li>
+                  <li><a class="dropdown-item" href="#">sub item 3</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" role="button"
+                  data-bs-toggle="dropdown" aria-expanded="false">
+                  portfolio
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownPortfolio">
+                  <li><a class="dropdown-item" href="#">sub item 1</a></li>
+                  <li><a class="dropdown-item" href="#">sub item 2</a></li>
+                  <li><a class="dropdown-item" href="#">sub item 3</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" role="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                  blogs
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownBlog">
+                  <li><a class="dropdown-item" href="#">sub item 1</a></li>
+                  <li><a class="dropdown-item" href="#">sub item 2</a></li>
+                  <li><a class="dropdown-item" href="#">sub item 3</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">contact</a>
+              </li>
+            </ul>
           </div>
-        </nav>
-        <form class="search">
-          <input class="form-control" type="search" placeholder="Search the Site..." aria-label="Search">
-        </form>
-      </section>
+        </div>
+      </nav>
+      <form class="search">
+        <input class="form-control" type="search" placeholder="Search the Site..." aria-label="Search">
+      </form>
+    </section>
+    <main>
       <section id="carouselFade" class="carousel slide carousel-fade carousel_modify" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -156,11 +156,11 @@
           </div>
         </div>
       </section>
-      <section class="introduction_blocks">
+      <section class="introduction">
         <div class="row">
           <div class="col-12 col-md-6 col-lg-4">
             <div class="welcome">
-              <h3 class="block_title">welcome</h3>
+              <h3 class="introduction_content_title">welcome</h3>
               <div class="welcome_body">
                 <div class="welcome_image_wrapper">
                   <img src="./images/welcome.jpg" alt="office building">
@@ -172,7 +172,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <div class="choose">
-              <h3 class="block_title">why choose me?</h3>
+              <h3 class="introduction_content_title">why choose me?</h3>
               <ul class="feature_list">
                 <li class="feature">
                   <a href="##" class="arrow_icon">
@@ -203,7 +203,7 @@
           </div>
           <div class="col-12 col-lg-4">
             <div class="news">
-              <h3 class="block_title">news & events</h3>
+              <h3 class="introduction_content_title">news & events</h3>
               <div class="news_cards_block">
                 <div class="news_card">
                   <div class="news_card_image">
@@ -230,35 +230,36 @@
       </section>
       <section class="work_gallery">
         <!-- Slider main container -->
-        <div class="swiper_wrapper">
+        <div class="gallery_header">
           <h3 class="gallery_title">feature works</h3>
-          <div class="swiper">
-            <div class="gallery_button_group">
-              <div class="swiper-button-prev"><i class="fas fa-chevron-left"></i></div>
-              <div class="swiper-button-next"><i class="fas fa-chevron-right"></i></div>
+          <div class="gallery_button_group">
+            <div class="swiper-button-prev"><i class="fas fa-chevron-left"></i></div>
+            <div class="swiper-button-next"><i class="fas fa-chevron-right"></i></div>
+          </div>
+        </div>
+        <div class="swiper">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide">
+              <img src="./images/feature1.jpg" alt="feature work">
+              <a href="##" class="work_link"><i class="fas fa-link"></i></a>
             </div>
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-              <!-- Slides -->
-              <div class="swiper-slide">
-                <img src="./images/feature1.jpg" alt="feature work">
-                <a href="##" class="work_link"><i class="fas fa-link"></i></a>
-              </div>
-              <div class="swiper-slide">
-                <img src="./images/feature2.jpg" alt="feature work">
-                <a href="##" class="work_link"><i class="fas fa-link"></i></a>
-              </div>
-              <div class="swiper-slide">
-                <img src="./images/feature3.jpg" alt="feature work">
-                <a href="##" class="work_link"><i class="fas fa-link"></i></a>
-              </div>
-              <div class="swiper-slide">
-                <img src="./images/feature4.jpg" alt="feature work">
-                <a href="##" class="work_link"><i class="fas fa-link"></i></a>
-              </div>
+            <div class="swiper-slide">
+              <img src="./images/feature2.jpg" alt="feature work">
+              <a href="##" class="work_link"><i class="fas fa-link"></i></a>
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/feature3.jpg" alt="feature work">
+              <a href="##" class="work_link"><i class="fas fa-link"></i></a>
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/feature4.jpg" alt="feature work">
+              <a href="##" class="work_link"><i class="fas fa-link"></i></a>
             </div>
           </div>
-        </div>       
+        </div>
+               
       </section>
     </main>
     <footer>
@@ -266,13 +267,13 @@
         <div class="row">
           <div class="col-12 col-md-6 col-lg-3">
             <div class="tweets">
-              <h4 class="footer_block_title">latest tweets</h4>
+              <h4 class="footer_content_title">latest tweets</h4>
               <p>loading tweets...</p>
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-3">
             <div class="testimonials_block">
-              <h4 class="footer_block_title">testimonials</h4>
+              <h4 class="footer_content_title">testimonials</h4>
               <div class="testimonials">
                 <div class="dialogue">
                   <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum libero, vel aliquam elit ipsum dolor sit amet."</p>
@@ -289,7 +290,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-3">
             <div class="contact">
-              <h4 class="footer_block_title">get in touch</h4>
+              <h4 class="footer_content_title">get in touch</h4>
               <form action="" method="post">
                 <input type="text" name="name" placeholder="Name">
                 <input type="email" name="email" placeholder="Email">
@@ -301,7 +302,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-3">
             <div class="flickr">
-              <h4 class="footer_block_title">flickr</h4>
+              <h4 class="footer_content_title">flickr</h4>
               <div class="flickr_album">
                 <img src="./images/f1.jpg" alt="website">
                 <img src="./images/f2.jpg" alt="family">
